@@ -51,7 +51,7 @@
     <File name="./data/images/banter-44.png" subtype="Code" buildaction="EmbedAsResource" />
     <File name="./Banter/GroupWindow.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/WrapBox.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Banter/PersonStore.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Banter/PersonManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/PersonGroup.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/InterruptableTimeout.cs" subtype="Code" buildaction="Compile" />
     <File name="./Banter/ConversationManager.cs" subtype="Code" buildaction="Compile" />
